# learnopengl-haskell

./: .gitignore  LICENSE  README.md  README.org  basicLightingDiffuse.frag  basicLightingDiffuse.vert  cameraKeyboardDt.frag  color.frag  color.vert  coordinateSystem.frag  coordinateSystem.vert  coordinateSystemDepth.vert  directionalLight.frag  directionalLight.vert  haskell-sdl.cabal  learnopengl-haskell.cabal  lightingMaps.frag  lightingMaps.vert  lightingScene.vert  material.frag  multipleLights.frag  multipleLightsLight.vert  pointLight.frag  pointLightLight.vert  shaders.frag  shaders.vert  specular.frag  spotLight.frag  stack.yaml  texture.frag  texture.vert  textures.vert
src/: Main.hs  basicLightingDiffuse.hs  cameraCircle.hs  cameraKeyboardDt.hs  cameraMousezoom.hs  color.hs  coordinateSystem.hs  coordinateSystemDepth.hs  directionalLight.hs  lightingMaps.hs  lightingScene.hs  material.hs  multipleLights.hs  pointLight.hs  rectangle.hs  shaders.hs  specular.hs  spotLight.hs  texture.hs  textures.hs  transformation.hs  triangle.hs
