name:                haskell-sdl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-sdl#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable triangle
  hs-source-dirs:      src
  main-is:             triangle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring

executable rectangle
  hs-source-dirs:      src
  main-is:             rectangle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring

executable shaders
  hs-source-dirs:      src
  main-is:             shaders.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time