name:                learnopengl-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alsymd/learnopengl-haskell#readme
license:             WTFPL
license-file:        LICENSE
author:              Yiyun Liu
maintainer:          liuyiyun@terpmail.umd.edu
copyright:           2017 Yiyun Liu
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable triangle
  hs-source-dirs:      src
  main-is:             triangle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring

executable rectangle
  hs-source-dirs:      src
  main-is:             rectangle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring

executable shaders
  hs-source-dirs:      src
  main-is:             shaders.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time

executable color
  hs-source-dirs:      src
  main-is:             color.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time

executable texture
  hs-source-dirs:      src
  main-is:             texture.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels

executable textures
  hs-source-dirs:      src
  main-is:             textures.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra

executable transformation
  hs-source-dirs:      src
  main-is:             transformation.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear
                       