name:                learnopengl-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alsymd/learnopengl-haskell#readme
license:             WTFPL
license-file:        LICENSE
author:              Yiyun Liu
maintainer:          liuyiyun@terpmail.umd.edu
copyright:           2017 Yiyun Liu
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable triangle
  hs-source-dirs:      src
  ghc-options:         -dynamic
  main-is:             triangle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring

executable rectangle
  hs-source-dirs:      src
  ghc-options:         -dynamic
  main-is:             rectangle.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring

executable shaders
  hs-source-dirs:      src
  ghc-options:         -dynamic
  main-is:             shaders.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time

executable color
  hs-source-dirs:      src
  main-is:             color.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time

executable texture
  hs-source-dirs:      src
  main-is:             texture.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels

executable textures
  hs-source-dirs:      src
  main-is:             textures.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra

executable transformation
  hs-source-dirs:      src
  main-is:             transformation.hs
  default-language:    Haskell2010
  ghc-options:         -dynamic
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear

executable coordinateSystem
  hs-source-dirs:      src
  main-is:             coordinateSystem.hs
  default-language:    Haskell2010
  ghc-options:         -dynamic
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear

executable coordinateSystemDepth
  hs-source-dirs:      src
  main-is:             coordinateSystemDepth.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear

executable cameraCircle
  hs-source-dirs:      src
  main-is:             cameraCircle.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear

executable cameraKeyboardDt
  hs-source-dirs:      src
  main-is:             cameraKeyboardDt.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear

executable cameraMousezoom
  hs-source-dirs:      src
  main-is:             cameraMousezoom.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear



executable lightingScene
  hs-source-dirs:      src
  main-is:             lightingScene.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear,
                       lens

executable basicLightingDiffuse
  hs-source-dirs:      src
  main-is:             basicLightingDiffuse.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear,
                       lens

executable specular
  hs-source-dirs:      src
  main-is:             specular.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear,
                       lens


executable material
  hs-source-dirs:      src
  main-is:             material.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear,
                       lens
executable lightingMaps
  hs-source-dirs:      src
  main-is:             lightingMaps.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear,
                       lens


executable directionalLight
  hs-source-dirs:      src
  main-is:             directionalLight.hs
  ghc-options:         -dynamic
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       sdl2,
                       OpenGL,
                       StateVar,
                       vector,
                       ObjectName,
                       bytestring,
                       Yampa,
                       time,
                       JuicyPixels,
                       JuicyPixels-extra,
                       linear,
                       lens